--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="titulo_realizar_movimento">Realizar Movimento</string>
     <string name="title_valor_juntas">Controle Juntas</string>
+    <string name="title_movimentacao">Movimentação</string>
 </resources>
